--- a/PhoneBook.API/appsettings.json
+++ b/PhoneBook.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "producer": {
+    "bootstrapservers": "localhost:9092"
+  },
   "AllowedHosts": "*"
 }
